{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 25,
  "lineage": "d786a7cd-a004-3d46-9167-af20df8ac8e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "BomGen_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-067a7a7df2f0187b9",
            "tags": {
              "Name": "BomGen_eip__0",
              "Project": "BoMGen"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d1c0c5de685bea66",
            "tags": {
              "Name": "BomGen_eip__1",
              "Project": "BoMGen"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BoMGen_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0242ae4edd70c5449",
            "owner_id": "360288436262",
            "tags": {
              "Name": "BoMGen_IGW",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "BoMGen_NATG",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BoMGen_private_NAT_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BoMGen_public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0242ae4edd70c5449",
            "id": "r-rtb-0ace4f0228b919a1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ace4f0228b919a1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.BoMGen_IGW",
            "aws_route_table.BomGen_Public_RT",
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BomGen_Private_RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f7027ad5856e81a8",
            "owner_id": "360288436262",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "BomGen_Private_RT",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BomGen_Public_RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ace4f0228b919a1b",
            "owner_id": "360288436262",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0242ae4edd70c5449",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BomGen_Public_RT",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BomGen_Private_RT",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ad25d35c7134e4",
            "route_table_id": "rtb-0f7027ad5856e81a8",
            "subnet_id": "subnet-0788951b9f1e0ef04"
          },
          "dependencies": [
            "aws_route_table.BomGen_Private_RT",
            "aws_subnet.BomGen_SubNet_Private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056caefe058109a71",
            "route_table_id": "rtb-0f7027ad5856e81a8",
            "subnet_id": "subnet-02a6a4e257c27b194"
          },
          "dependencies": [
            "aws_route_table.BomGen_Private_RT",
            "aws_subnet.BomGen_SubNet_Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BomGen_Public_RT",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ca7efdd3a7204c",
            "route_table_id": "rtb-0ace4f0228b919a1b",
            "subnet_id": "subnet-0d08d02a1341cc984"
          },
          "dependencies": [
            "aws_route_table.BomGen_Public_RT",
            "aws_subnet.BomGen_SubNet_Public",
            "aws_vpc.BomGen_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f4c0738f81f8c65",
            "route_table_id": "rtb-0ace4f0228b919a1b",
            "subnet_id": "subnet-05520b2ed07c6cbc1"
          },
          "dependencies": [
            "aws_route_table.BomGen_Public_RT",
            "aws_subnet.BomGen_SubNet_Public",
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BomGen_SubNet_Private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:360288436262:subnet/subnet-0788951b9f1e0ef04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.32/28",
            "id": "subnet-0788951b9f1e0ef04",
            "map_public_ip_on_launch": false,
            "owner_id": "360288436262",
            "tags": {
              "Name": "BomGen_SubNet_3",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:360288436262:subnet/subnet-02a6a4e257c27b194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.0.48/28",
            "id": "subnet-02a6a4e257c27b194",
            "map_public_ip_on_launch": false,
            "owner_id": "360288436262",
            "tags": {
              "Name": "BomGen_SubNet_4",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BomGen_SubNet_Public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:360288436262:subnet/subnet-0d08d02a1341cc984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/28",
            "id": "subnet-0d08d02a1341cc984",
            "map_public_ip_on_launch": false,
            "owner_id": "360288436262",
            "tags": {
              "Name": "BomGen_SubNet_1",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:360288436262:subnet/subnet-05520b2ed07c6cbc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.0.16/28",
            "id": "subnet-05520b2ed07c6cbc1",
            "map_public_ip_on_launch": false,
            "owner_id": "360288436262",
            "tags": {
              "Name": "BomGen_SubNet_2",
              "Project": "BoMGen"
            },
            "vpc_id": "vpc-06597c9c044db9237"
          },
          "dependencies": [
            "aws_vpc.BomGen_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BomGen_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:360288436262:vpc/vpc-06597c9c044db9237",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/26",
            "default_network_acl_id": "acl-0e18b65c2c00789f8",
            "default_route_table_id": "rtb-0d8f4e1663d9f1485",
            "default_security_group_id": "sg-0bd27102acc7e6750",
            "dhcp_options_id": "dopt-daf848b1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06597c9c044db9237",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8f4e1663d9f1485",
            "owner_id": "360288436262",
            "tags": {
              "Name": "BomGen_VPC",
              "Project": "BoMGen"
            }
          }
        }
      ]
    }
  ]
}